Add language support
Updated the language-files for the ui text in the dish_of_the_day_page

--- a/lib/l10n/app_da.arb
+++ b/lib/l10n/app_da.arb
@@ -6,5 +6,21 @@
   "punchText": "Du har slået knappen så mange gange:",
   "@punchText": {
     "description": "The text in the middle, describing how many times you have punched the button"
+  },
+  "calories": "Kalorier",
+  "@calories": {
+    "description": "Calories info on dish page"
+  },
+  "mainCourse": "Hovedret",
+  "@mainCourse": {
+    "description": "Main course dish type."
+  },
+  "dessert": "Dessert",
+  "@dessert": {
+    "description": "Dessert dish type."
+  },
+  "dishOfTheDay": "Dagens ret",
+  "@dishOfTheDay": {
+    "description": "Title of the dish of the day page"
   }
 }
