--- a/lib/l10n/app_da.arb
+++ b/lib/l10n/app_da.arb
@@ -7,7 +7,7 @@
   "@punchText": {
     "description": "The text in the middle, describing how many times you have punched the button"
   },
-  "noDishText": "Dagens ret er ikke offentliggjort endnu, kig tilbage senere",
+  "noDishText": "Dagens ret er ikke offentliggjort endnu. Tjek siden senere.",
   "@noDishText": {
     "description": "Text to show when no dish for todays date has been posted"
   }
