--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -7,7 +7,7 @@
   "@punchText": {
     "description": "The text in the middle, describing how many times you have punched the button"
   },
-  "noDishText": "Todays dish has not been posted yet, check back later",
+  "noDishText": "Todays menu is not ready yet. Please check back later.",
   "@noDishText": {
     "description": "Text to show when no dish for todays date has been posted"
   }
