Added functionality such that when the time is between 21 and 24, a "today's dish service has ended" message will appear along with the JunkFood logo

--- a/lib/l10n/app_da.arb
+++ b/lib/l10n/app_da.arb
@@ -22,5 +22,9 @@
   "dishOfTheDay": "Dagens ret",
   "@dishOfTheDay": {
     "description": "Title of the dish of the day page"
+  },
+  "servingHasEndedText" : "Servering af dagens ret er slut, vend tilbage i morgen",
+  "@servingHasEndedText" : {
+    "description" : "Text for today's dish serving is over"
   }
 }
