--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -22,5 +22,13 @@
   "dishOfTheDay": "Dish of the day",
   "@dishOfTheDay": {
     "description": "Title of the dish of the day page"
+  },
+  "allergens": "Allergens",
+  "@allergens": {
+    "description": "Display of allergens title"
+  },
+  "noAllergens": "No allergens",
+  "@noAllergens": {
+    "description": "Display message for when no allergens"
   }
 }
