--- a/lib/l10n/app_da.arb
+++ b/lib/l10n/app_da.arb
@@ -30,5 +30,9 @@
   "noAllergens": "Ingen allergener",
   "@noAllergens": {
     "description": "Display message for when no allergens"
+  },
+  "noDishText": "Dagens ret er ikke offentliggjort endnu. Tjek siden senere.",
+  "@noDishText": {
+    "description": "Text to show when no dish for todays date has been posted"
   }
 }
