--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -30,5 +30,9 @@
   "noAllergens": "No allergens",
   "@noAllergens": {
     "description": "Display message for when no allergens"
+  },
+   "noDishText": "Todays menu is not ready yet. Please check back later.",
+  "@noDishText": {
+    "description": "Text to show when no dish for todays date has been posted"
   }
 }
