--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -30,5 +30,21 @@
   "noAllergens": "No allergens",
   "@noAllergens": {
     "description": "Display message for when no allergens"
+  },
+  "noDescription": "No description",
+  "@noDescription": {
+    "description": "Display message for when no description"
+  },
+  "noCalories": "No calories",
+  "@noCalories": {
+    "description": "Display message for when no calories"
+  },
+  "noTitle": "No title",
+  "@noTitle": {
+    "description": "Display message for when no title"
+  },
+  "noDishType": "No dishtype",
+  "@noDishType": {
+    "description": "Display message for when no dishtype"
   }
 }
