Create rate dish button, and adjust coloscheme.
Co-authored-by: Allan <asia@itu.dk>
Co-authored-by: Lauritz <lana@itu.dk>

--- a/lib/utilities/l10n/app_da.arb
+++ b/lib/utilities/l10n/app_da.arb
@@ -78,5 +78,9 @@
   "servingHasEndedText" : "Servering af dagens ret er slut, vend tilbage i morgen",
   "@servingHasEndedText" : {
     "description" : "Text for today's dish serving is over"
+  },
+  "rateButtonText" : "Bedøm denne ret",
+  "@rateButtonText" : {
+    "description" : "The text on the rate the dish button"
   }
 }
