--- a/lib/utilities/l10n/app_da.arb
+++ b/lib/utilities/l10n/app_da.arb
@@ -90,5 +90,25 @@
   "ratingFeedback" : "Med din feedback, bliver vi klogere på om retten skal serveres igen.",
   "@ratingFeedback" : {
     "description" : "feedback text for rating widget"
+  },
+  "commentHeading" : "Vi vil gerne høre fra dig",
+  "@commentHeading" : {
+    "description": "heading for comment page"
+  },
+  "commentPageParagraph": "Har du en idé til, hvad vi kunne lave til dagen måltid? Eller måske noget andet, du gerne vil dele med os? Uanset om det er ris eller ros, eller et særligt ønske, dagens ret på dine fødselsdag mm., vil vi elske at høre dine tanker. Du er altid velkommen til at sende os en besked. Din mening betyder meget for os!",
+  "@commentPageParagraph": {
+    "description": "paragraph for comment page"
+  },
+  "yourNameHintText" : "Dit navn",
+  "@yourNameHintText" : {
+    "description": "hint text for inputting name in comment page"
+  },
+  "writeCommentText" : "Skriv din feedback her",
+  "@writeCommentText" : {
+    "description": "hint text for inputting the actual comment in comment page"
+  },
+  "commentPageSubmitButton" : "Indsend", 
+  "@commentPageSubmitButton" : {
+    "description": "text for submit button"
   }
 }
