--- a/lib/utilities/l10n/app_en.arb
+++ b/lib/utilities/l10n/app_en.arb
@@ -90,5 +90,9 @@
   "ratingFeedback" : "With your feedback, we become wiser about whether the dish should be served again.",
   "@ratingFeedback" : {
     "description" : "feedback text for rating widget"
+  },
+  "ratingContinue" : "Continue",
+  "@ratingContinue" : {
+    "description" : "Text to submit the rating"
   }
 }
