Add an acknowlagedment page for user rating
The page is ready to use when the rating story is done

Co-authored-by: Johan <jsbe@itu.dk>

--- a/lib/utilities/l10n/app_en.arb
+++ b/lib/utilities/l10n/app_en.arb
@@ -90,5 +90,17 @@
   "ratingFeedback" : "With your feedback, we become wiser about whether the dish should be served again.",
   "@ratingFeedback" : {
     "description" : "feedback text for rating widget"
+  },
+  "ratingAcknowledgeTitle" : "Thanks for your rating!",
+  "@ratingAcknowledgeTitle" : {
+    "description" : "Title for the page that acknowlegde the user for spending their time on rating the dish"
+  },
+  "ratingAcknowledgeText" : "You are always welcome to send us a message.\nYour opinion means a lot to us",
+  "@ratingAcknowledgeText" : {
+    "description" : "Text for the page that acknowlegde the user for spending their time on rating the dish"
+  },
+  "ratingAcknowledgeButton" : "Back to the dish",
+  "@ratingAcknowledgeButton" : {
+    "description" : "Text for the button to navigate user back to the frontpage"
   }
 }
