Change locale of appbar
Co-authored-by: Jonas <kram@itu.dk>

--- a/lib/utilities/l10n/app_da.arb
+++ b/lib/utilities/l10n/app_da.arb
@@ -82,5 +82,9 @@
   "rateButtonText" : "Bedøm denne ret",
   "@rateButtonText" : {
     "description" : "The text on the rate the dish button"
+  },
+  "localeHelper" : "da",
+  "@localeHelper" : {
+    "description" : "The text on the rate the dish button"
   }
 }
