--- a/lib/utilities/l10n/app_en.arb
+++ b/lib/utilities/l10n/app_en.arb
@@ -91,7 +91,7 @@
   "@ratingFeedback" : {
     "description" : "feedback text for rating widget"
   },
-  "ratingAcknowledgeTitle" : "Thanks for your rating!",
+  "ratingAcknowledgeTitle" : "Thank you for rating!",
   "@ratingAcknowledgeTitle" : {
     "description" : "Title for the page that acknowlegde the user for spending their time on rating the dish"
   },
