--- a/lib/utilities/l10n/app_da.arb
+++ b/lib/utilities/l10n/app_da.arb
@@ -75,7 +75,7 @@
   "@noDishType": {
     "description": "Display message for when no dishtype"
   },
-  "servingHasEndedText" : "Servering af dagens ret er slut, vend tilbage i morgen",
+  "servingHasEndedText" : "Servering af dagens ret er slut,\nvend tilbage i morgen",
   "@servingHasEndedText" : {
     "description" : "Text for today's dish serving is over"
   },
