Removed name field and storing of name in comments. Added language support

--- a/lib/utilities/l10n/app_da.arb
+++ b/lib/utilities/l10n/app_da.arb
@@ -130,5 +130,17 @@
   "commentPageSubmitButton" : "Indsend", 
   "@commentPageSubmitButton" : {
     "description": "text for submit button"
+  },
+  "emptyCommentErrorMessage" : "Kommentarfeltet skal være udfyldt",
+  "@emptyCommentErrorMessage" : {
+    "description": "error message for when trying to submit an empty comment"
+  },
+  "succesfulCommentSubmission" : "Kommentar indsendt!",
+  "@succesfulCommentSubmission" : {
+    "description": "comment is submitted succesfully"
+  },
+  "failedCommentSubmission" : "Kommentar kunne ikke indsendes", 
+  "@failedCommentSubmission" : {
+    "description": "failed to submit comment"
   }
 }
