using applocal and text theming

--- a/lib/utilities/l10n/app_da.arb
+++ b/lib/utilities/l10n/app_da.arb
@@ -130,5 +130,17 @@
   "commentPageSubmitButton" : "Indsend", 
   "@commentPageSubmitButton" : {
     "description": "text for submit button"
+  },
+  "changeRating" : "Du har bedømt denne ret, vil du ændre din bedømmelse?", 
+  "@changeRating" : {
+    "description": "if user has rated once, but tries to rate again"
+  },
+  "yes" : "Ja", 
+  "@yes" : {
+    "description": "used for yes/no dialogs"
+  },
+  "no" : "Nej", 
+  "@no" : {
+    "description": "used for yes/no dialogs"
   }
 }
