--- a/lib/utilities/l10n/app_en.arb
+++ b/lib/utilities/l10n/app_en.arb
@@ -130,5 +130,17 @@
   "commentPageSubmitButton" : "Submit", 
   "@commentPageSubmitButton" : {
     "description": "text for submit button"
+  },
+  "changeRating" : "You have rated this dish, would you like to change your rating?", 
+  "@changeRating" : {
+    "description": "if user has rated once, but tries to rate again"
+  },
+  "yes" : "Yes", 
+  "@yes" : {
+    "description": "used for yes/no dialogs"
+  },
+  "no" : "No", 
+  "@no" : {
+    "description": "used for yes/no dialogs"
   }
 }
