--- a/lib/utilities/l10n/app_da.arb
+++ b/lib/utilities/l10n/app_da.arb
@@ -154,5 +154,9 @@
   "failedCommentSubmission" : "Kommentar kunne ikke indsendes", 
   "@failedCommentSubmission" : {
     "description": "failed to submit comment"
+  },
+  "sendUsMsgBtn" : "Send os en besked", 
+  "@sendUsMsgBtn" : {
+    "description": "Encouraging user to send a message"
   }
 }
