--- a/lib/utilities/l10n/app_en.arb
+++ b/lib/utilities/l10n/app_en.arb
@@ -154,5 +154,17 @@
   "failedCommentSubmission" : "Failed to post comment", 
   "@failedCommentSubmission" : {
     "description": "failed to submit comment"
+  },
+  "commentAcknowledgementTitle" : "Thank you for your comment",
+  "@commentAcknowledgementTitle" : {
+    "description": "Title for comment acknowledgement page"
+  },
+  "commentAcknowledgementText" : "Your opinion means a lot to us",
+  "@commentAcknowledgementText" : {
+    "description": "Text for comment acknowledgement page"
+  },
+  "commentAcknowledgementButton" : "Return to homepage",
+  "@commentAcknowledgementButton" : {
+    "description": "Text for the button to navigate user back to the frontpage"
   }
 }
