Fix dish image problem on mobile browsers
Also
- Center no dish and serving ended pages
- All buttons have equal heights
- Dish image fills width of screen on mobile

--- a/lib/l10n/app_da.arb
+++ b/lib/l10n/app_da.arb
@@ -1,4 +1,5 @@
 {
+  "@@locale": "da",
   "homePageTitle": "Startside",
   "@homePageTitle": {
     "description": "This is the title banner of the Homepage"
