--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -1,4 +1,5 @@
 {
+  "@@locale": "en",
   "homePageTitle": "Homepage",
   "@homePageTitle": {
     "description": "This is the title banner of the Homepage"
