--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -8,23 +8,7 @@
   "@punchText": {
     "description": "The text in the middle, describing how many times you have punched the button"
   },
-  "calories": "Calories",
-  "@calories": {
-    "description": "Calories info on dish page"
-  },
-  "mainCourse": "Main Course",
-  "@mainCourse": {
-    "description": "Main course dish type."
-  },
-  "dessert": "Dessert",
-  "@dessert": {
-    "description": "Dessert dish type."
-  },
-  "dishOfTheDay": "Dish of the day",
-  "@dishOfTheDay": {
-    "description": "Title of the dish of the day page"
-  },
-  "allergens": "Allergens",
+  "allergens": "Be aware if you don't support:",
   "@allergens": {
     "description": "Display of allergens title"
   },
@@ -51,14 +35,6 @@
   "dishOfTheDay": "Dish of the day",
   "@dishOfTheDay": {
     "description": "Title of the dish of the day page"
-  },
-  "allergens": "Allergens",
-  "@allergens": {
-    "description": "Display of allergens title"
-  },
-  "noAllergens": "No allergens",
-  "@noAllergens": {
-    "description": "Display message for when no allergens"
   },
   "noDescription": "No description",
   "@noDescription": {
@@ -171,5 +147,6 @@
   "sendUsMsgBtn" : "Send us a message", 
   "@sendUsMsgBtn" : {
     "description": "Encouraging user to send a message"
-  }
+  },
+  "dishContents": "The dish contains:"
 }
